--- a/japress/setting.html
+++ b/japress/setting.html
@@ -9,7 +9,7 @@
         <div class="header-set-title" style="padding: 20px;">
             <div class="header-set-title-name">
                 <h2>jaPress 设置中心</h2></div>
-            <div><a class="el-link el-link--default">
+            <div><a class="el-link el-link--default" href="https://www.miigua.com/a/256.html" target="_blank">
                 <span class="el-link--inner"><button type="button"
                                                      class="el-button el-button--default el-button--mini"><span>
                             主题文档
