--- a/japress/article.html
+++ b/japress/article.html
@@ -207,12 +207,23 @@
                 <input type="hidden" name="articleId" value="#(article.id)">
                 <input type="hidden" name="render" value="default">
                 <input type="hidden" name="pid" id="comment-pid">
+
+
                 <div class="comment-user-plane">
                     <div class="comment_form_textarea_box comment-textarea"><textarea class="comment_form_textarea" name="content"
                                                                      id="comment" placeholder="发表你的看法" required
                                                                      rows="5"></textarea>
                     </div>
                 </div>
+                #if(!USER)
+                <div class="comment_userinput">
+                    <div class="comment-form-author"><input id="nickname" name="nickname" placeholder="昵称(*)" type="text"
+                                                            value="" size="30" required></div>
+                    <div class="comment-form-email"><input id="email" name="email" type="text" placeholder="邮箱(*)"
+                                                           value="" required></div>
+                </div>
+                #end
+
                 #if(option("article_comment_vcode_enable","true"))
                 <div class="comment-user-plane">
                     <div class="comment_form_textarea_box comment_userinput input" style="padding-left: 0; justify-content: left;">
