--- a/japress/artlist.html
+++ b/japress/artlist.html
@@ -43,7 +43,11 @@
                             </a>
                         </h2>
                         <div class="post-item-content">
-                            #maxLength(article.text,130)……
+                            #if(article.summary)
+                            #(article.summary)
+                            #else
+                            #maxLength(article.text,130)……)
+                            #end
                         </div>
                         <div class="post-item-info">
                             <div class="post-item-meta">
